# df-webfort-mp

./: CMakeLists.txt  COMPILING.md  CONTRIBUTORS.md  INSTALLING.txt  LICENSE  README.md  package.sh
docs/: GRAPHICS_MODE_ANALYSIS.md
server/: CMakeLists.txt  input.hpp  input.hpp.new  server.cpp  server.hpp  webfort.cpp  webfort.hpp
server/websocketpp/websocketpp/logger/: basic.hpp
server/websocketpp/websocketpp/roles/: server_endpoint.hpp
static/: README.md  config.js  webfort.css  webfort.html
static/js/: params.js  webfort.js
